# hcr_nn

./: .gitignore  CMakeLists.txt  README.md  hcr_nn.sublime-project  hcr_nn_config.hpp.in
data/: digits-test-normalized-discrete.csv  digits-training-normalized-discrete.csv
docs/: Doxyfile.in
src/: main.cpp
src/Func/: func.cpp  func.hpp
src/HCR/: hcr.cpp  hcr.hpp  parse.cpp  parse.hpp
